--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-
-#spring.application.name=pipeline-java-spring-mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring
-#spring.datasource.username=root
-#spring.datasource.password=12345
+spring.application.name=pipeline-java-spring-mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.username=root
+spring.datasource.password=12345
 
 #spring.datasource.url=jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
 #spring.datasource.username=azuredevops
