--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ stages:
     displayName: "Build Stage"
     jobs:
       - job: Build
+        displayName: "Build Job"
         pool:
           vmImage: 'ubuntu-latest'
         steps:
@@ -16,16 +17,22 @@ stages:
               mavenPomFile: 'pom.xml'
               goals: 'clean package'
 
+          - script: |
+              echo "Conteúdo após o build:"
+              ls -R $(System.DefaultWorkingDirectory)
+
           - task: PublishBuildArtifacts@1
             inputs:
               pathToPublish: '$(System.DefaultWorkingDirectory)/target'
               artifactName: 'drop'
+              publishLocation: 'PipelineArtifact'
 
   - stage: Test
     displayName: "Test Stage"
     dependsOn: Build
     jobs:
       - job: Test
+        displayName: "Test Job"
         pool:
           vmImage: 'ubuntu-latest'
         steps:
@@ -46,15 +53,21 @@ stages:
     condition: succeeded()
     jobs:
       - job: Deploy
+        displayName: "Deploy Job"
         pool:
           vmImage: 'ubuntu-latest'
         steps:
           - task: DownloadBuildArtifacts@0
             inputs:
               artifactName: 'drop'
+              downloadPath: '$(Pipeline.Workspace)/drop'
+
+          - script: |
+              echo "Conteúdo após download:"
+              ls -R $(Pipeline.Workspace)/drop
 
           - task: AzureWebApp@1
             inputs:
               azureSubscription: 'DevOps_APPs'
               appName: 'azspring'
-              package: '$(Pipeline.Workspace)/drop/*.jar'
+              package: '$(Pipeline.Workspace)/drop/**/*.jar'
