--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.datasource.password=D&vops12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+info.app.name=Pipeline Java Spring
+info.app.description=Aplicação de exemplo para monitoramento
+info.app.version=1.0.0
+
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.access=unrestricted
+#management.endpoints.web.exposure.include=health,info
