--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,16 @@
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.application.name=pipeline-java-spring-mysql
+#spring.application.name=pipeline-java-spring-mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring
+#spring.datasource.username=root
+#spring.datasource.password=12345
+
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=springuser
+spring.datasource.password=springpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 #spring.datasource.url=jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
 #spring.datasource.username=azuredevops
