--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,17 +20,42 @@ steps:
         sudo apt-get update
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 
-  # ✅ Alterar plugin de autenticação e definir senha para root
+  # ✅ Parar MySQL e subir com --skip-grant-tables
   - task: Bash@3
-    displayName: 'Configurar root do MySQL'
+    displayName: 'Parar MySQL e iniciar com --skip-grant-tables'
     inputs:
       targetType: 'inline'
       script: |
-        sudo systemctl start mysql
-        echo "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}'; FLUSH PRIVILEGES;" > alter_root.sql
-        sudo mysql < alter_root.sql
+        sudo systemctl stop mysql
+        sudo mkdir -p /var/run/mysqld
+        sudo chown mysql:mysql /var/run/mysqld
+        sudo mysqld_safe --skip-grant-tables &
+        
+        # Aguarda MySQL iniciar
+        sleep 10
 
-  # ✅ Criar banco de dados spring
+  # ✅ Alterar plugin de autenticação do root e definir senha
+  - task: Bash@3
+    displayName: 'Alterar root e definir senha'
+    inputs:
+      targetType: 'inline'
+      script: |
+        mysql -u root <<-EOSQL
+          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}';
+          FLUSH PRIVILEGES;
+        EOSQL
+
+  # ✅ Parar mysqld_safe e reiniciar MySQL normalmente
+  - task: Bash@3
+    displayName: 'Reiniciar MySQL normalmente'
+    inputs:
+      targetType: 'inline'
+      script: |
+        sudo pkill mysqld
+        sleep 5
+        sudo systemctl start mysql
+
+  # ✅ Criar banco spring
   - task: Bash@3
     displayName: 'Criar banco de dados spring'
     inputs:
