--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.application.name=pipeline-java-spring-mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
 spring.datasource.username=root
 spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/spring
 #spring.datasource.username=springuser
