--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  MYSQL_ROOT_PASS: '12345'
+  DB_USER: 'springuser'
   SPRING_DB_NAME: 'spring'
+  # Atenção: DB_PASS deve ser definida como variável secreta no Azure DevOps
 
 steps:
   # ✅ Instalar MySQL
@@ -20,56 +21,25 @@ steps:
         sudo apt-get update
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 
-  # ✅ Parar MySQL e subir com --skip-grant-tables
+  # ✅ Criar banco e usuário
   - task: Bash@3
-    displayName: 'Parar MySQL e iniciar com --skip-grant-tables'
+    displayName: 'Criar banco e usuário'
     inputs:
       targetType: 'inline'
       script: |
-        sudo systemctl stop mysql
-        sudo mkdir -p /var/run/mysqld
-        sudo chown mysql:mysql /var/run/mysqld
-        sudo mysqld_safe --skip-grant-tables &
-        
-        # Aguarda MySQL iniciar
-        sleep 10
-
-  # ✅ Alterar plugin de autenticação do root e definir senha
-  - task: Bash@3
-    displayName: 'Alterar root e definir senha'
-    inputs:
-      targetType: 'inline'
-      script: |
-        mysql -u root <<-EOSQL
-          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}';
-          FLUSH PRIVILEGES;
-        EOSQL
-
-  # ✅ Parar mysqld_safe e reiniciar MySQL normalmente
-  - task: Bash@3
-    displayName: 'Reiniciar MySQL normalmente'
-    inputs:
-      targetType: 'inline'
-      script: |
-        sudo pkill mysqld
-        sleep 5
         sudo systemctl start mysql
-
-  # ✅ Criar banco spring
-  - task: Bash@3
-    displayName: 'Criar banco de dados spring'
-    inputs:
-      targetType: 'inline'
-      script: |
-        mysql -u root -p${MYSQL_ROOT_PASS} -e "CREATE DATABASE IF NOT EXISTS ${SPRING_DB_NAME};"
+        sudo mysql -e "CREATE DATABASE IF NOT EXISTS ${SPRING_DB_NAME};"
+        sudo mysql -e "CREATE USER IF NOT EXISTS '${DB_USER}'@'localhost' IDENTIFIED BY '$(DB_PASS)';"
+        sudo mysql -e "GRANT ALL PRIVILEGES ON ${SPRING_DB_NAME}.* TO '${DB_USER}'@'localhost';"
+        sudo mysql -e "FLUSH PRIVILEGES;"
 
   # ✅ Testar conexão
   - task: Bash@3
-    displayName: 'Testar conexão com banco spring'
+    displayName: 'Testar conexão com springuser'
     inputs:
       targetType: 'inline'
       script: |
-        mysql -u root -p${MYSQL_ROOT_PASS} -e "SHOW DATABASES;"
+        mysql -u ${DB_USER} -p$(DB_PASS) -e "SHOW DATABASES;"
 
   # ✅ Build com Maven
   - task: Maven@4
@@ -80,7 +50,7 @@ steps:
 
   # ✅ Executar aplicação Spring Boot
   - task: Bash@3
-    displayName: 'Executar aplicação Spring Boot'
+    displayName: 'Executar Spring Boot'
     inputs:
       targetType: 'inline'
       script: |
