--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,9 +7,8 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  DB_USER: 'springuser'
+  MYSQL_ROOT_PASS: '12345'
   SPRING_DB_NAME: 'spring'
-  # Atenção: DB_PASS deve ser definida como variável secreta no Azure DevOps
 
 steps:
   # ✅ Instalar MySQL
@@ -21,25 +20,42 @@ steps:
         sudo apt-get update
         sudo DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
 
-  # ✅ Criar banco e usuário
+  # ✅ Extrair senha de debian-sys-maint
   - task: Bash@3
-    displayName: 'Criar banco e usuário'
+    displayName: 'Extrair senha de debian-sys-maint'
+    name: extractDebianPassword
     inputs:
       targetType: 'inline'
       script: |
-        sudo systemctl start mysql
-        sudo mysql -e "CREATE DATABASE IF NOT EXISTS ${SPRING_DB_NAME};"
-        sudo mysql -e "CREATE USER IF NOT EXISTS '${DB_USER}'@'localhost' IDENTIFIED BY '$(DB_PASS)';"
-        sudo mysql -e "GRANT ALL PRIVILEGES ON ${SPRING_DB_NAME}.* TO '${DB_USER}'@'localhost';"
-        sudo mysql -e "FLUSH PRIVILEGES;"
+        PASS=$(sudo grep password /etc/mysql/debian.cnf | head -n1 | awk '{print $3}')
+        echo "##vso[task.setvariable variable=DEBIAN_PASS;issecret=true]$PASS"
 
-  # ✅ Testar conexão
+  # ✅ Alterar plugin e senha do root usando debian-sys-maint
   - task: Bash@3
-    displayName: 'Testar conexão com springuser'
+    displayName: 'Alterar plugin e senha do root'
     inputs:
       targetType: 'inline'
       script: |
-        mysql -u ${DB_USER} -p$(DB_PASS) -e "SHOW DATABASES;"
+        mysql -u debian-sys-maint -p$(DEBIAN_PASS) <<-EOSQL
+          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}';
+          FLUSH PRIVILEGES;
+        EOSQL
+
+  # ✅ Criar banco de dados spring com root
+  - task: Bash@3
+    displayName: 'Criar banco spring com root'
+    inputs:
+      targetType: 'inline'
+      script: |
+        mysql -u root -p${MYSQL_ROOT_PASS} -e "CREATE DATABASE IF NOT EXISTS ${SPRING_DB_NAME};"
+
+  # ✅ Testar conexão com root
+  - task: Bash@3
+    displayName: 'Testar conexão com root'
+    inputs:
+      targetType: 'inline'
+      script: |
+        mysql -u root -p${MYSQL_ROOT_PASS} -e "SHOW DATABASES;"
 
   # ✅ Build com Maven
   - task: Maven@4
@@ -50,7 +66,7 @@ steps:
 
   # ✅ Executar aplicação Spring Boot
   - task: Bash@3
-    displayName: 'Executar Spring Boot'
+    displayName: 'Executar aplicação Spring Boot'
     inputs:
       targetType: 'inline'
       script: |
