--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,17 @@
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.application.name=pipeline-java-spring-mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring
-#spring.datasource.username=root
-#spring.datasource.password=12345
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.application.name=pipeline-java-spring-mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/spring
-spring.datasource.username=springuser
-spring.datasource.password=${DB_PASS}
+spring.datasource.username=root
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.application.name=pipeline-java-spring-mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring
+#spring.datasource.username=springuser
+#spring.datasource.password=${DB_PASS}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/spring
 #spring.datasource.username=springuser
