--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,10 +40,8 @@ steps:
         echo "Aguardando MySQL iniciar..."
         sleep 5
         
-        mysql -u debian-sys-maint -p$(DEBIAN_PASS) <<-EOSQL
-          ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}';
-          FLUSH PRIVILEGES;
-          EOSQL
+        mysql -u debian-sys-maint -p$(DEBIAN_PASS) -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY '${MYSQL_ROOT_PASS}';"
+        mysql -u debian-sys-maint -p$(DEBIAN_PASS) -e "FLUSH PRIVILEGES;"
 
   # ✅ Criar banco spring
   - task: Bash@3
@@ -53,7 +51,7 @@ steps:
       script: |
         sudo systemctl start mysql
         sleep 5
-  
+        
         mysql -u root -p${MYSQL_ROOT_PASS} -e "CREATE DATABASE IF NOT EXISTS ${SPRING_DB_NAME};"
 
   # ✅ Testar conexão com root
@@ -64,7 +62,7 @@ steps:
       script: |
         sudo systemctl start mysql
         sleep 5
-  
+        
         mysql -u root -p${MYSQL_ROOT_PASS} -e "SHOW DATABASES;"
 
   # ✅ Build com Maven
