--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@
 #spring.datasource.username=root
 #spring.datasource.password=12345
 
-spring.datasource.url=jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
-spring.datasource.username=azuredevops
-spring.datasource.password=D&vops12345
+#spring.datasource.url=jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
+#spring.datasource.username=azuredevops
+#spring.datasource.password=D&vops12345
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
