--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,17 @@
 #spring.datasource.password=D&vops12345
 
 #debug=true
-debug=${DEBUG:false}
+#debug=${DEBUG:false}
 
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+
+spring.datasource.url=jdbc:mysql://<MYSQL_HOST>:3306/<DB_NAME>?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
