--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,86 +20,18 @@ stages:
           - checkout: self
 
           - script: |
-              echo "Subindo MySQL com docker-compose..."
-              docker-compose up -d db
-            displayName: 'Start MySQL container'
+              echo "Verificando Docker e Maven..."
+              docker --version
+              mvn -version
+            displayName: 'Check Docker and Maven'
 
           - script: |
-              echo "Aguardando MySQL ficar disponível..."
-              for i in {1..10}; do
-                docker exec $(docker ps -qf "name=db") mysqladmin ping -h "localhost" -uroot -proot && break
-                echo "Aguardando..."
-                sleep 5
-              done
-            displayName: 'Wait for MySQL readiness'
-
-          - task: Maven@4
+              echo "Executando testes com Testcontainers..."
+              mvn verify
             displayName: 'Run Unit and Integration Tests'
-            inputs:
-              mavenPomFile: 'pom.xml'
-              goals: 'verify'
-
-          - script: |
-              echo "Derrubando MySQL..."
-              docker-compose down
-            displayName: 'Stop MySQL container'
 
           - task: PublishTestResults@2
             inputs:
               testResultsFormat: 'JUnit'
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               failTaskOnFailedTests: true
-
-  - stage: BuildAndPush
-    displayName: "Build and Push Docker Image"
-    dependsOn: Test
-    condition: succeeded()
-    jobs:
-      - job: Build
-        displayName: "Build and Push Job"
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - checkout: self
-
-          - task: Maven@4
-            displayName: 'Package Application'
-            inputs:
-              mavenPomFile: 'pom.xml'
-              goals: 'clean package -DskipTests'
-
-          - script: |
-              echo "Construindo imagem Docker..."
-              docker build -t $(containerRegistry)/$(imageName):$(dockerTag) .
-            displayName: 'Docker Build'
-
-          - task: Docker@2
-            displayName: 'Push image to ACR'
-            inputs:
-              command: 'push'
-              repository: '$(imageName)'
-              tags: '$(dockerTag)'
-              containerRegistry: 'MyACRServiceConnection'
-
-  - stage: Deploy
-    displayName: "Deploy Stage"
-    dependsOn: BuildAndPush
-    condition: succeeded()
-    jobs:
-      - job: Deploy
-        displayName: "Deploy Job"
-        pool:
-          vmImage: 'ubuntu-latest'
-        steps:
-          - task: AzureCLI@2
-            displayName: 'Deploy to Azure Web App'
-            inputs:
-              azureSubscription: 'DevOps_APPs'
-              scriptType: 'bash'
-              scriptLocation: 'inlineScript'
-              inlineScript: |
-                az webapp config container set \
-                  --name azspring \
-                  --resource-group myResourceGroup \
-                  --docker-custom-image-name $(containerRegistry)/$(imageName):$(dockerTag) \
-                  --docker-registry-server-url https://$(containerRegistry)
