--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,3 +35,56 @@ stages:
               testResultsFormat: 'JUnit'
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               failTaskOnFailedTests: true
+  - stage: BuildAndPush
+    displayName: "Build and Push Docker Image"
+    dependsOn: Test
+    condition: succeeded()
+    jobs:
+      - job: Build
+        displayName: "Build and Push Job"
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - checkout: self
+
+          - task: Maven@4
+            displayName: 'Package Application'
+            inputs:
+              mavenPomFile: 'pom.xml'
+              goals: 'clean package -DskipTests'
+
+          - script: |
+              echo "Construindo imagem Docker..."
+              docker build -t $(containerRegistry)/$(imageName):$(dockerTag) .
+            displayName: 'Docker Build'
+
+          - task: Docker@2
+            displayName: 'Push image to ACR'
+            inputs:
+              command: 'push'
+              repository: '$(imageName)'
+              tags: '$(dockerTag)'
+              containerRegistry: 'MyACRServiceConnection'
+
+  - stage: Deploy
+    displayName: "Deploy Stage"
+    dependsOn: BuildAndPush
+    condition: succeeded()
+    jobs:
+      - job: Deploy
+        displayName: "Deploy Job"
+        pool:
+          vmImage: 'ubuntu-latest'
+        steps:
+          - task: AzureCLI@2
+            displayName: 'Deploy to Azure Container App'
+            inputs:
+              azureSubscription: 'DevOps_APPs'
+              scriptType: 'bash'
+              scriptLocation: 'inlineScript'
+              inlineScript: |
+                az containerapp update \
+                  --name azspring \
+                  --resource-group myResourceGroup \
+                  --image $(containerRegistry)/$(imageName):$(dockerTag)
+
