--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
+    url: jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring?useSSL=true&requireSSL=true
     username: azuredevops
     password: D&vops12345
     driver-class-name: com.mysql.cj.jdbc.Driver
