--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -14,5 +14,11 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+logging:
+  level:
+    root: INFO
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
 server:
   port: 80  # Pode ajustar se estiver usando outra porta no Azure Container App
