--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure</groupId>
+            <artifactId>applicationinsights-runtime-attach</artifactId>
+            <version>3.7.1</version>
+        </dependency>
     </dependencies>
 
     <build>
