--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@
 #spring.datasource.username=root
 #spring.datasource.password=12345
 
+applicationinsights.connection-string=InstrumentationKey=c4d73764-91fc-46b0-bf01-359883323bad;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/;ApplicationId=404d94af-300f-4c4a-9b1e-5c17c30bd358
+
 spring.datasource.url=jdbc:mysql://devopsmysqlserver.mysql.database.azure.com:3306/spring
 spring.datasource.username=azuredevops
 spring.datasource.password=D&vops12345
