--- a/src/main/resources/backup.properties
+++ b/src/main/resources/backup.properties
@@ -1,3 +1,13 @@
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.application.name=pipeline-java-spring-mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring
+#spring.datasource.username=root
+#spring.datasource.password=12345
 
 applicationinsights.connection-string=InstrumentationKey=c4d73764-91fc-46b0-bf01-359883323bad;IngestionEndpoint=https://brazilsouth-1.in.applicationinsights.azure.com/;LiveEndpoint=https://brazilsouth.livediagnostics.monitor.azure.com/;ApplicationId=404d94af-300f-4c4a-9b1e-5c17c30bd358
 
@@ -7,8 +17,3 @@ spring.datasource.password=D&vops12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-management.prometheus.metrics.export.enabled=true
-management.endpoints.web.exposure.include=health,info,prometheus
-management.endpoint.prometheus.access=unrestricted
-management.server.port=8080
