--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,12 @@ stages:
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
               failTaskOnFailedTests: true
 
+          - task: PublishCodeCoverageResults@1
+            inputs:
+              codeCoverageTool: 'JaCoCo'
+              summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/target/site/jacoco/jacoco.xml'
+              reportDirectory: '$(System.DefaultWorkingDirectory)/**/target/site/jacoco'
+
   - stage: Deploy
     displayName: "Deploy Stage"
     dependsOn: Test
